<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_action_search"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_action_add"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_market"
        android:icon="@drawable/ic_action_market"
        android:title="@string/market" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_action_profile"
        android:title="@string/profile" />

</menu>
